使用SSE
